# hybrid-microservice-adk-agent-observability

./: .env.example  README.md
src/: adk_agent_service.py  calling_service.py  config.py  downstream_service.py  observability.py  pyproject.toml  requirements.txt  run_services.sh
src/agents/: downstream_caller_agent.py
